--- a/app/site/main-scene-slide-deck.module.css
+++ b/app/site/main-scene-slide-deck.module.css
@@ -40,7 +40,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: flex-start;
-  gap: 5px;
+  gap: 2px;
   flex: 0 0 auto;
   margin: 0;
   padding: 0;
@@ -49,10 +49,10 @@
 
 .slideDeckIndicatorDots span {
   flex: 0 0 auto;
-  width: 9px;
-  height: 9px;
-  font-size: 9px;
-  line-height: 9px;
+  width: 14px;
+  height: 14px;
+  font-size: 14px;
+  line-height: 14px;
   display: inline-flex;
   align-items: center;
   justify-content: center;
